@startuml

package "detection" {
    abstract class EngineOCR {
        + name : str
        --
        + __init__(name: str)
        {abstract} + run(img_path, output_dir) : list
        + loadImage(image_path) : Mat
        + detect_spread_split(img) : int | None
        + crop_bubble(img, x, y, w, h, ...) : str
    }

    class EngineOCRFactory {
        - debug : bool
        - use_cpu : bool
        --
        + __init__(engine_name, debug, use_cpu)
        - _setup_engine(name) : EngineOCR
        + run(image_path, tmp_dir) : List<BubbleZone>
    }

    class YOLOTextDetector {
        - conf_threshold : float
        - imgsz : int
        - model : YOLO
        --
        + __init__(model_path, conf, imgsz, debug, use_cpu)
        + run(img_path, output_dir) : List<BubbleZone>
        - _run_single(img, img_path, ...) : List<BubbleZone>
        - _detect(img) : list<dict>
        - _merge_overlapping(detections, iou_threshold) : list<dict>
        - _draw_detections(img, detections) : Mat
    }
}

EngineOCR <|-- YOLOTextDetector
EngineOCRFactory o-- EngineOCR : gerencia

EngineOCRFactory ..> YOLOTextDetector : instancia

@enduml